Fix About close button not working on mobile

--- a/src/components/ButtonItem/style.scss
+++ b/src/components/ButtonItem/style.scss
@@ -79,6 +79,10 @@ body:not(.mod-mobile) .button-item:hover {
     pointer-events: none;
     animation: fadeOut 5s forwards;
   }
+
+  .mod-mobile .close {
+    pointer-events: all;
+  }
 }
 
 .button-item-icon {
